fix autoplay on mobile

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -144,13 +144,15 @@ img {
 			.mobile-nav-content {
 				display: none;
 				position: absolute;
-				top: 25px;
+				top: 35px;
 				right: 0;
 				width: 290px;
-				padding: 20px;
+				padding: 20px 20px 0;
 				background: #fff;
 				color: #333;
 				.box-shadow(1px 1px 3px rgba(0,0,0,0.1));
+				.border-radius(3px);
+				z-index: 99999;
 				p {
 					color: #333;
 					margin: 0;
@@ -976,6 +978,14 @@ img {
 		height: 100%;
 		margin: 0;
 		position: absolute;
+	}
+	.front-image {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 	&:after {
 		content: '';
