--- a/src/css/responsive.less
+++ b/src/css/responsive.less
@@ -44,9 +44,8 @@
 					.mobile-nav-content {
 						width: auto;
 						position: fixed;
-						top: 47px;
+						top: 50px;
 						left: 0;
-						bottom: 0;
 						right: 0;
 					}
 				}
@@ -83,6 +82,13 @@
 			&:after {
 				display: none;
 			}
+		}
+	}
+	.video-container {
+		.front-image {
+			background-image: url(../img/front_bg.jpg);
+			background-position: center;
+			background-size: cover;
 		}
 	}
 	#mastfoot {
